unpackaged/main/default/objects/Opportunity_Product__c/Opportunity_Product__c.object-meta.xml
<CustomObject>
    <description>ATS Products tied to an Opportunity (for CPQ Quotes, not JDT)</description>
    <label>ATS Opportunity Product</label>
    <nameField>
        <displayFormat>OP-{000000}</displayFormat>
        <label>Opportunity Product #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ATS Opportunity Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>