unpackaged/main/default/objects/Opportunity_Product__c/fields/ATS_Product__c.field-meta.xml
<CustomField>
    <fullName>ATS_Product__c</fullName>
    <description>The ATS Product tied to this Opportunity Product line item</description>
    <label>ATS Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipName>Opportunity_Products</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>