unpackaged/main/default/objects/Opportunity_Product__c/fields/Cost_Per_1_000__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_1_000__c</fullName>
    <formula>IF( Per_1_000__c = TRUE,( Unit_Price__c / ATS_Product__r.Size__c )* Rate__c ,
IF( Per_Acre__c = True, (( Unit_Price__c / ATS_Product__r.Size__c )* Rate__c)/43.56,
0 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Size (oz or lb) is empty on the ATS Products Tab then cost per acre and per 1000 will not complete</inlineHelpText>
    <label>Cost Per 1,000</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>