unpackaged/main/default/objects/Opportunity_Product__c/fields/Cost_Per_Acre__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Acre__c</fullName>
    <formula>IF( Per_Acre__c = TRUE, (( Unit_Price__c /  ATS_Product__r.Size__c ) *  Rate__c ),
IF( Per_1_000__c = TRUE, (( Unit_Price__c /  ATS_Product__r.Size__c ) *  Rate__c )* 43.56,
0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Per Acre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>