unpackaged/main/default/objects/Opportunity_Product__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <formula>HYPERLINK( ATS_Product__r.Label__c , &quot;View Label&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Label</label>
    <type>Text</type>
</CustomField>