unpackaged/main/default/objects/Opportunity_Product__c/fields/Line_Comment__c.field-meta.xml
<CustomField>
    <fullName>Line_Comment__c</fullName>
    <label>Line Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>