unpackaged/main/default/objects/Opportunity_Product__c/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <formula>IF ( Unit_Cost__c &gt; 0 &amp;&amp; Unit_Price__c &gt; 0, 1 - (Unit_Cost__c / Unit_Price__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>