unpackaged/main/default/objects/Opportunity_Product__c/fields/Opp_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Opp_Product_ID__c</fullName>
    <description>Unique ID for the Opportunity ATS Product (Opp number and product id)</description>
    <externalId>true</externalId>
    <label>Opp Product ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>