unpackaged/main/default/objects/Opportunity_Product__c/fields/Order_Qty__c.field-meta.xml
<CustomField>
    <fullName>Order_Qty__c</fullName>
    <label>Order Qty</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>