unpackaged/main/default/objects/Opportunity_Product__c/fields/Per_Acre__c.field-meta.xml
<CustomField>
    <fullName>Per_Acre__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Per Acre</label>
    <type>Checkbox</type>
</CustomField>