unpackaged/main/default/objects/Opportunity_Product__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <formula>ATS_Product__r.Product_Code__c</formula>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>