unpackaged/main/default/objects/Opportunity_Product__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <label>Rate (oz or lb)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>