unpackaged/main/default/objects/Opportunity_Product__c/fields/Target_Area__c.field-meta.xml
<CustomField>
    <fullName>Target_Area__c</fullName>
    <description>The target area (in Square Feet) for this Product Application</description>
    <inlineHelpText>The target area (in Square Feet) for this Product Application</inlineHelpText>
    <label>Target Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>