unpackaged/main/default/objects/Opportunity_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Product_Name__c</columns>
    <columns>NAME</columns>
    <columns>ATS_Product__c</columns>
    <columns>Opp_Product_ID__c</columns>
    <columns>Extended_Price__c</columns>
    <columns>Extended_Cost__c</columns>
    <columns>Order_Qty__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>Unit_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>